# synthesize_data

./: DataSynthesizer_main.py  README.md  pyproject.toml  requirements.txt
DataSynthesizer/: data_correlated.ipynb  data_independent.ipynb  docs_data_synthesizer.py
