[tool.poetry]
name = "tab1tha-synthesize-data"
version = "0.1.0"
description = "poc data synthesizer"
authors = ["tab1tha <tambetachere@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
streamlit = "^1.30.0"
datasynthesizer = "^0.1.13"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
